# esa-tpm-ds-catalog

./: LICENSE  requirements.txt
scraper/: pyproject.toml
scraper/scraper/: items.py  loaders.py  models.py  pipelines.py  settings.py
scraper/scraper/spiders/: terrasar_x.py
