[tool.poetry]
name = "esa-tpm-ds-catalog"
version = "0.1.0"
description = "A better catalog experience for ESA TPM Online Dissemination Service."
authors = ["João Victor Teófilo Salgado <jvictorteo2000@hotmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Scrapy = "^2.11.0"
SQLAlchemy = "^2.0.23"
geoalchemy2 = "^0.14.3"
shapely = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
